samples/_failures_safe/1761668193_d15ec8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db574960.c: In function ‘main’:
./samples/SAFE/__tmp_db574960.c:131:31: error: missing terminating " character
  131 |             cols_b = read_int("Enter columns for matrix B
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_db574960.c:131:13: error: expected expression at end of input
  131 |             cols_b = read_int("Enter columns for matrix B
      |             ^~~~~~
./samples/SAFE/__tmp_db574960.c:131:22: error: too few arguments to function ‘read_int’
  131 |             cols_b = read_int("Enter columns for matrix B
      |                      ^~~~~~~~
./samples/SAFE/__tmp_db574960.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_db574960.c:131:13: error: expected declaration or statement at end of input
  131 |             cols_b = read_int("Enter columns for matrix B
      |             ^~~~~~
./samples/SAFE/__tmp_db574960.c:131:13: error: expected declaration or statement at end of input
